Deployment Strategy/dc-catalog-green.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: catalog-green
  namespace: coolstore
  labels:
    app: catalog-green
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - catalog-green
        from:
          kind: ImageStreamTag
          namespace: coolstore
          name: 'catalog:green'
        lastTriggeredImage: >-
          quay.io/tyip/catalog@sha256:3a34d1bbffaa6b2c78946cf92c88ce01e05acd11d3206acd6d0f4f2c810ca4cf
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: catalog-green
    deploymentconfig: catalog-green
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: catalog-green
        deploymentconfig: catalog-green
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      containers:
        - name: catalog-green
          image: >-
            quay.io/tyip/catalog@sha256:3a34d1bbffaa6b2c78946cf92c88ce01e05acd11d3206acd6d0f4f2c810ca4cf
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
