Deployment Strategy/catalog-green-svc.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  name: catalog-green
  namespace: coolstore
  labels:
    app: catalog-green
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8778-tcp
      protocol: TCP
      port: 8778
      targetPort: 8778
  selector:
    app: catalog-green
    deploymentconfig: catalog-green
  clusterIP: 172.30.173.111
  type: ClusterIP
  sessionAffinity: None
